--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -5,6 +5,11 @@ layout: page
   <article>
     {% if page.profiles %}
       {% for profile in page.profiles %}
+        {% if forloop.first %}
+          <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 1em;">Principle Investigator</div>
+        {% elseif forloop.index == 2 %}
+          <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Research Assistant</div>
+        {% endif %}
         <hr>
         <div class="profile float-{% if profile.align == 'left' %}left{% else %}right{% endif %}">
           {% if profile.image %}
@@ -32,5 +37,16 @@ layout: page
         </div>
       {% endfor %}
     {% endif %}
+
+    <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Collaborators</div>
+    <div class="collaborators">
+      <p><strong>Richard Futrell</strong>, Associate Professor, Department of Language Science, University of California, Irvine,</p>
+      <p><a href="https://sites.socsci.uci.edu/~rfutrell/">https://sites.socsci.uci.edu/~rfutrell/</a></p>
+      <p><a href="mailto:rfutrell@uci.edu">rfutrell@uci.edu</a></p>
+
+      <p><strong>Connor Mayer</strong>, Assistant Professor, Department of Language Science, University of California, Irvine,</p>
+      <p><a href="https://www.socsci.uci.edu/~cjmayer/">https://www.socsci.uci.edu/~cjmayer/</a></p>
+      <p><a href="mailto:cjmayer@uci.edu">cjmayer@uci.edu</a></p>
+    </div>
   </article>
 </div>
