pushed in edits

--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -6,7 +6,7 @@ layout: page
     {% if page.profiles %}
       {% for profile in page.profiles %}
         {% if forloop.first %}
-          <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 1em;">Principle Investigator</div>
+          <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 1em;">Principal Investigator</div>
         {% elseif forloop.index == 2 %}
           <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Research Assistant</div>
         {% endif %}
