--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -7,21 +7,24 @@ layout: page
       {% for profile in page.profiles %}
         {% if forloop.first %}
           <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 1em;">Principal Investigator</div>
-        {% elseif forloop.index == 2 %}
+        {% elsif forloop.index == 2 %}
           <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Research Assistant</div>
         {% endif %}
+
         <hr>
         <div class="profile float-{% if profile.align == 'left' %}left{% else %}right{% endif %}">
           {% if profile.image %}
             {% assign profile_image_path = profile.image | prepend: 'assets/img/' | default: '' %}
+            {% assign profile_image_class = 'img-fluid z-depth-1' %}
             {% if profile.image_circular %}
-              {% assign profile_image_class = 'img-fluid z-depth-1 rounded-circle' %}
+              {% assign profile_image_class = profile_image_class | append: ' rounded-circle' %}
             {% else %}
-              {% assign profile_image_class = 'img-fluid z-depth-1 rounded' %}
+              {% assign profile_image_class = profile_image_class | append: ' rounded' %}
             {% endif %}
-            {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px) 30vw, 95vw{% endcapture %}
+            {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3 }}px, (min-width: 576px) 30vw, 95vw{% endcapture %}
             {% include figure.liquid loading="eager" path=profile_image_path class=profile_image_class sizes=sizes alt=profile.image %}
           {% endif %}
+
           {% if profile.more_info %}
             <div class="more-info">{{ profile.more_info }}</div>
           {% endif %}
@@ -40,11 +43,11 @@ layout: page
 
     <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Collaborators</div>
     <div class="collaborators">
-      <p><strong>Richard Futrell</strong>, Associate Professor, Department of Language Science, University of California, Irvine,</p>
+      <p><strong>Richard Futrell</strong>, Associate Professor, Department of Language Science, University of California, Irvine</p>
       <p><a href="https://sites.socsci.uci.edu/~rfutrell/">https://sites.socsci.uci.edu/~rfutrell/</a></p>
       <p><a href="mailto:rfutrell@uci.edu">rfutrell@uci.edu</a></p>
 
-      <p><strong>Connor Mayer</strong>, Assistant Professor, Department of Language Science, University of California, Irvine,</p>
+      <p><strong>Connor Mayer</strong>, Assistant Professor, Department of Language Science, University of California, Irvine</p>
       <p><a href="https://www.socsci.uci.edu/~cjmayer/">https://www.socsci.uci.edu/~cjmayer/</a></p>
       <p><a href="mailto:cjmayer@uci.edu">cjmayer@uci.edu</a></p>
     </div>
