--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -1,4 +1,3 @@
----
 layout: page
 ---
 <div class="post">
@@ -41,38 +40,38 @@ layout: page
       {% endfor %}
     {% endif %}
 
-<div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Collaborators</div>
-<div class="collaborators" style="margin-top: 1em; line-height: 1.6;">
-  <div style="margin-bottom: 1.5em;">
-    <p><strong>Richard Futrell</strong></p>
-    <p>Associate Professor</p>
-    <p>Department of Language Science, University of California, Irvine</p>
-    <p>
-      <a href="https://sites.socsci.uci.edu/~rfutrell/" target="_blank" style="text-decoration: none; color: #0066cc;">
-        Website
-      </a>
-    </p>
-    <p>
-      <a href="mailto:rfutrell@uci.edu" style="text-decoration: none; color: #0066cc;">
-        rfutrell@uci.edu
-      </a>
-    </p>
-  </div>
-  <div style="margin-bottom: 1.5em;">
-    <p><strong>Connor Mayer</strong></p>
-    <p>Assistant Professor</p>
-    <p>Department of Language Science, University of California, Irvine</p>
-    <p>
-      <a href="https://www.socsci.uci.edu/~cjmayer/" target="_blank" style="text-decoration: none; color: #0066cc;">
-        Website
-      </a>
-    </p>
-    <p>
-      <a href="mailto:cjmayer@uci.edu" style="text-decoration: none; color: #0066cc;">
-        cjmayer@uci.edu
-      </a>
-    </p>
-  </div>
+    <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Collaborators</div>
+    <div class="collaborators" style="margin-top: 1em; line-height: 1.6;">
+      <div style="margin-bottom: 1.5em;">
+        <p><strong>Richard Futrell</strong></p>
+        <p>Associate Professor</p>
+        <p>Department of Language Science, University of California, Irvine</p>
+        <p>
+          <a href="https://sites.socsci.uci.edu/~rfutrell/" target="_blank" style="text-decoration: none; color: #0066cc;">
+            Website
+          </a>
+        </p>
+        <p>
+          <a href="mailto:rfutrell@uci.edu" style="text-decoration: none; color: #0066cc;">
+            rfutrell@uci.edu
+          </a>
+        </p>
+      </div>
+      <div style="margin-bottom: 1.5em;">
+        <p><strong>Connor Mayer</strong></p>
+        <p>Assistant Professor</p>
+        <p>Department of Language Science, University of California, Irvine</p>
+        <p>
+          <a href="https://www.socsci.uci.edu/~cjmayer/" target="_blank" style="text-decoration: none; color: #0066cc;">
+            Website
+          </a>
+        </p>
+        <p>
+          <a href="mailto:cjmayer@uci.edu" style="text-decoration: none; color: #0066cc;">
+            cjmayer@uci.edu
+          </a>
+        </p>
+      </div>
+    </div>
+  </article>
 </div>
-
-
