--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -1,4 +1,5 @@
-layout: default
+---
+layout: page
 ---
 <div class="post">
   <article>
@@ -14,13 +15,13 @@ layout: default
         <div class="profile float-{% if profile.align == 'left' %}left{% else %}right{% endif %}">
           {% if profile.image %}
             {% assign profile_image_path = profile.image | prepend: 'assets/img/' | default: '' %}
-            {% assign profile_image_class = 'img-fluid z-depth-1' %}
+            {% # assign profile_image_class = 'img-fluid z-depth-1' %}
             {% if profile.image_circular %}
               {% assign profile_image_class = profile_image_class | append: ' rounded-circle' %}
             {% else %}
               {% assign profile_image_class = profile_image_class | append: ' rounded' %}
             {% endif %}
-            {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3 }}px, (min-width: 576px) 30vw, 95vw{% endcapture %}
+            {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3 }}px, (min-width: 576px) 30vw, 95vw"{% endcapture %}
             {% include figure.liquid loading="eager" path=profile_image_path class=profile_image_class sizes=sizes alt=profile.image %}
           {% endif %}
 
