--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -47,12 +47,12 @@ layout: page
         <p>Associate Professor</p>
         <p>Department of Language Science, University of California, Irvine</p>
         <p>
-          <a href="https://sites.socsci.uci.edu/~rfutrell/" target="_blank" style="text-decoration: none; color: #0066cc;">
+          <a href="https://sites.socsci.uci.edu/~rfutrell/" target="_blank" style="text-decoration: none;">
             Website
           </a>
         </p>
         <p>
-          <a href="mailto:rfutrell@uci.edu" style="text-decoration: none; color: #0066cc;">
+          <a href="mailto:rfutrell@uci.edu" style="text-decoration: none;">
             rfutrell@uci.edu
           </a>
         </p>
@@ -62,12 +62,12 @@ layout: page
         <p>Assistant Professor</p>
         <p>Department of Language Science, University of California, Irvine</p>
         <p>
-          <a href="https://www.socsci.uci.edu/~cjmayer/" target="_blank" style="text-decoration: none; color: #0066cc;">
+          <a href="https://www.socsci.uci.edu/~cjmayer/" target="_blank" style="text-decoration: none">
             Website
           </a>
         </p>
         <p>
-          <a href="mailto:cjmayer@uci.edu" style="text-decoration: none; color: #0066cc;">
+          <a href="mailto:cjmayer@uci.edu" style="text-decoration: none">
             cjmayer@uci.edu
           </a>
         </p>
