--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -8,6 +8,8 @@ layout: page
         {% if forloop.first %}
           <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 1em;">Principal Investigator</div>
         {% elsif forloop.index == 2 %}
+          <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Collaborators</div>
+        {% elsif forloop.index == 3 %}
           <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Research Assistant</div>
         {% endif %}
 
