--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -10,7 +10,7 @@ layout: page
         {% elsif forloop.index == 2 %}
           <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Affiliated Researchers</div>
         {% elsif forloop.index == 3 %}
-          <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Research Assistant</div>
+          <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Research Assistants</div>
         {% endif %}
 
         <hr>
