--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -43,7 +43,7 @@ layout: page
     {% endif %}
 
     {% if page.alumni %}
-      <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Alumni</div>
+      <div class="subheading" style="color: gray; font-size: 1.5em; margin-top: 2em;">Alum</div>
       {% for profile in page.alumni %}
         <hr>
         <div class="profile float-{% if profile.align == 'left' %}left{% else %}right{% endif %}">
