--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -81,14 +81,10 @@ layout: page
         <p>Associate Professor</p>
         <p>Department of Language Science, University of California, Irvine</p>
         <p>
-          <a href="https://sites.socsci.uci.edu/~rfutrell/" target="_blank" style="text-decoration: none;">
-            Website
-          </a>
+          <a href="https://sites.socsci.uci.edu/~rfutrell/" target="_blank" style="text-decoration: none;"> Website </a>
         </p>
         <p>
-          <a href="mailto:rfutrell@uci.edu" style="text-decoration: none;">
-            rfutrell@uci.edu
-          </a>
+          <a href="mailto:rfutrell@uci.edu" style="text-decoration: none;"> rfutrell@uci.edu </a>
         </p>
       </div>
       <div style="margin-bottom: 1.5em;">
@@ -96,14 +92,10 @@ layout: page
         <p>Assistant Professor</p>
         <p>Department of Language Science, University of California, Irvine</p>
         <p>
-          <a href="https://www.socsci.uci.edu/~cjmayer/" target="_blank" style="text-decoration: none">
-            Website
-          </a>
+          <a href="https://www.socsci.uci.edu/~cjmayer/" target="_blank" style="text-decoration: none"> Website </a>
         </p>
         <p>
-          <a href="mailto:cjmayer@uci.edu" style="text-decoration: none">
-            cjmayer@uci.edu
-          </a>
+          <a href="mailto:cjmayer@uci.edu" style="text-decoration: none"> cjmayer@uci.edu </a>
         </p>
       </div>
     </div>
